@@ -5,9 +5,12 @@
   <object class="GtkBox" id="welcome">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
-    <property name="halign">center</property>
+    <property name="halign">fill</property>
+    <property name="expand">true</property>
     <property name="valign">center</property>
     <property name="orientation">vertical</property>
+    <property name="margin-left">70</property>
+    <property name="margin-right">70</property>
     <property name="spacing">15</property>
     <child>
       <object class="GtkBox" id="box_center">
